@@ -1,4 +1,6 @@
 2009-11-02	Olivier Bilodeau <obilodeau@inverse.ca>
+	* pf/html/admin/common.php: Fixed alignment of the filter input dialog 
+
 	* pf/lib/pf/SNMP.pm, pf/lib/pf/vlan.pm: Removed dead code, added POD
 	doc, added TODO tasks
 
